Build: added the first RegEx Patterns to get the name and area of the class.